[project]
name = "blog_writing_crew"
version = "0.1.0"
description = "blog-writing-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.14.7",
    "tavily>=0.5.0",
    "pytrends>=4.9.0",
    "requests>=2.31.0",
    "feedparser>=6.0.0",
]

[project.scripts]
blog_writing_crew = "blog_writing_crew.main:run"
run_crew = "blog_writing_crew.main:run"
train = "blog_writing_crew.main:train"
replay = "blog_writing_crew.main:replay"
test = "blog_writing_crew.main:test"
run_with_trigger = "blog_writing_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
